--- a/package.json
+++ b/package.json
@@ -6,9 +6,14 @@
   "license": "GNU GPL v3",
   "private": true,
   "devDependencies": {
-    "node-sass": "^4.12.0"
+    "node-sass": "^4.12.0",
+    "npm-run-all": "^4.1.5"
   },
   "scripts": {
-    "start": "node-sass -w scss/main.scss dist/main.css"
+    "start": "npm-run-all sass:**",
+    "sass:main": "node-sass scss/main.scss dist/main.css",
+    "sass:main:small": "node-sass scss/main-small.scss dist/main-small.css",
+    "sass:main:medium": "node-sass scss/main-medium.scss dist/main-medium.css",
+    "sass:main:large": "node-sass scss/main-large.scss dist/main-large.css"
   }
 }
