--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
   "license": "GNU GPL v3",
   "private": true,
   "devDependencies": {
+    "del": "^5.0.0",
+    "del-cli": "^2.0.0",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5"
   },
   "scripts": {
-    "start": "npm-run-all sass:**",
+    "start": "npm-run-all clean sass:**",
+    "clean": "del-cli dist/*",
     "sass:main": "node-sass scss/main.scss dist/main.css",
     "sass:main:small": "node-sass scss/main-small.scss dist/main-small.css",
     "sass:main:medium": "node-sass scss/main-medium.scss dist/main-medium.css",
