Name library and add a stylesheet that has all media queries included

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "my-css-lib",
+  "name": "c4s-css",
   "version": "0.0.1",
-  "description": "My css library",
+  "description": "Concise Composable Classes Comprehensive Stylesheets",
   "author": "Cas Dijkman",
   "license": "GNU GPL v3",
   "private": true,
@@ -13,20 +13,23 @@
     "npm-run-all": "^4.1.5"
   },
   "scripts": {
+    "postinstall": "yarn start",
     "start": "npm-run-all clean sass:**",
     "clean": "del-cli dist/*",
-    "sass:main":            "node-sass scss/main-all.scss dist/main-all.css",
-    "sass:main:min":        "node-sass scss/main-all.scss dist/main-all.min.css --output-style compressed",
-    "sass:main:small":      "node-sass scss/main-small.scss dist/main-small.css",
-    "sass:main:small:min":  "node-sass scss/main-small.scss dist/main-small.min.css --output-style compressed",
-    "sass:main:medium":     "node-sass scss/main-medium.scss dist/main-medium.css",
-    "sass:main:medium:min": "node-sass scss/main-medium.scss dist/main-medium.min.css --output-style compressed",
-    "sass:main:large":      "node-sass scss/main-large.scss dist/main-large.css",
-    "sass:main:large:min":  "node-sass scss/main-large.scss dist/main-large.min.css --output-style compressed",
-    "sass:main:huge":       "node-sass scss/main-huge.scss dist/main-huge.css",
-    "sass:main:huge:min":   "node-sass scss/main-huge.scss dist/main-huge.min.css --output-style compressed",
-    "sass:main:print":      "node-sass scss/main-print.scss dist/main-print.css",
-    "sass:main:print:min":  "node-sass scss/main-print.scss dist/main-print.min.css --output-style compressed",
+    "sass":         "node-sass scss/c4s.scss     dist/c4s.css",
+    "sass:min":     "node-sass scss/c4s.scss     dist/c4s.min.css --output-style compressed",
+    "sass:s":       "node-sass scss/c4s-s.scss   dist/c4s-s.css",
+    "sass:s:min":   "node-sass scss/c4s-s.scss   dist/c4s-s.min.css --output-style compressed",
+    "sass:m":       "node-sass scss/c4s-m.scss   dist/c4s-m.css",
+    "sass:m:min":   "node-sass scss/c4s-m.scss   dist/c4s-m.min.css --output-style compressed",
+    "sass:l":       "node-sass scss/c4s-l.scss   dist/c4s-l.css",
+    "sass:l:min":   "node-sass scss/c4s-l.scss   dist/c4s-l.min.css --output-style compressed",
+    "sass:h":       "node-sass scss/c4s-h.scss   dist/c4s-h.css",
+    "sass:h:min":   "node-sass scss/c4s-h.scss   dist/c4s-h.min.css --output-style compressed",
+    "sass:pt":      "node-sass scss/c4s-p.scss   dist/c4s-p.css",
+    "sass:p:min":   "node-sass scss/c4s-p.scss   dist/c4s-p.min.css --output-style compressed",
+    "sass:all":     "node-sass scss/c4s-all.scss dist/c4s-all.css",
+    "sass:all:min": "node-sass scss/c4s-all.scss dist/c4s-all.min.css --output-style compressed",
     "demo": "browser-sync"
   }
 }
