Fix bug in compiling sass scripts

--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "postinstall": "yarn start",
     "start": "npm-run-all clean sass:**",
     "clean": "del-cli dist/*",
-    "sass":         "node-sass scss/c4s.scss     dist/c4s.css",
-    "sass:min":     "node-sass scss/c4s.scss     dist/c4s.min.css --output-style compressed",
+    "sass:c4s":     "node-sass scss/c4s.scss     dist/c4s.css",
+    "sass:c4s:min": "node-sass scss/c4s.scss     dist/c4s.min.css --output-style compressed",
     "sass:s":       "node-sass scss/c4s-s.scss   dist/c4s-s.css",
     "sass:s:min":   "node-sass scss/c4s-s.scss   dist/c4s-s.min.css --output-style compressed",
     "sass:m":       "node-sass scss/c4s-m.scss   dist/c4s-m.css",
