--- a/package.json
+++ b/package.json
@@ -9,27 +9,14 @@
     "browser-sync": "^2.26.7",
     "del": "^5.0.0",
     "del-cli": "^2.0.0",
+    "gulp": "^4.0.2",
+    "gulp-rename": "^1.4.0",
+    "gulp-sass": "^4.0.2",
     "node-sass": "^4.12.0",
     "npm-run-all": "^4.1.5"
   },
   "scripts": {
-    "postinstall": "yarn start",
-    "start": "npm-run-all clean sass:**",
-    "clean": "del-cli dist/*",
-    "sass:base": "    node-sass scss/c4s-base.scss dist/c4s-base.css",
-    "sass:base:min": "node-sass scss/c4s-base.scss dist/c4s-base.min.css --output-style compressed",
-    "sass:s": "       node-sass scss/c4s-s.scss    dist/c4s-s.css",
-    "sass:s:min": "   node-sass scss/c4s-s.scss    dist/c4s-s.min.css --output-style compressed",
-    "sass:m": "       node-sass scss/c4s-m.scss    dist/c4s-m.css",
-    "sass:m:min": "   node-sass scss/c4s-m.scss    dist/c4s-m.min.css --output-style compressed",
-    "sass:l": "       node-sass scss/c4s-l.scss    dist/c4s-l.css",
-    "sass:l:min": "   node-sass scss/c4s-l.scss    dist/c4s-l.min.css --output-style compressed",
-    "sass:h": "       node-sass scss/c4s-h.scss    dist/c4s-h.css",
-    "sass:h:min": "   node-sass scss/c4s-h.scss    dist/c4s-h.min.css --output-style compressed",
-    "sass:pt": "      node-sass scss/c4s-p.scss    dist/c4s-p.css",
-    "sass:p:min": "   node-sass scss/c4s-p.scss    dist/c4s-p.min.css --output-style compressed",
-    "sass:all": "     node-sass scss/c4s-all.scss  dist/c4s-all.css",
-    "sass:all:min": " node-sass scss/c4s-all.scss  dist/c4s-all.min.css --output-style compressed",
+    "start": "gulp",
     "demo": "browser-sync"
   }
 }
