--- a/package.json
+++ b/package.json
@@ -8,12 +8,9 @@
   "devDependencies": {
     "browser-sync": "^2.26.7",
     "del": "^5.0.0",
-    "del-cli": "^2.0.0",
     "gulp": "^4.0.2",
     "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
-    "node-sass": "^4.12.0",
-    "npm-run-all": "^4.1.5"
+    "gulp-sass": "^4.0.2"
   },
   "scripts": {
     "start": "gulp",
