--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "private": true,
   "devDependencies": {
     "browser-sync": "^2.26.7",
+    "css": "^2.2.4",
     "del": "^5.0.0",
     "gulp": "^4.0.2",
     "gulp-rename": "^1.4.0",
