--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "del": "^5.0.0",
     "gulp": "^4.0.2",
     "gulp-data": "^1.3.1",
+    "gulp-eslint": "^6.0.0",
     "gulp-nunjucks-render": "^2.2.3",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
+    "gulp-stylelint": "^13.0.0",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
     "stylelint-order": "^3.0.1",
@@ -23,6 +25,6 @@
     "start": "gulp",
     "build": "gulp build",
     "demo": "browser-sync",
-    "lint": "stylelint src/**.scss"
+    "lint": "gulp lint"
   }
 }
