--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "browser-sync": "^2.26.7",
     "css": "^2.2.4",
     "del": "^5.0.0",
+    "glob": "^7.1.6",
     "gulp": "^4.0.2",
     "gulp-data": "^1.3.1",
     "gulp-eslint": "^6.0.0",
