Move linting rc files to package.json

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "start": "gulp",
     "build": "gulp build",
     "demo": "browser-sync",
-    "lint": "gulp lint"
+    "lint": "gulp lint",
+    "lint-rc": "yarn eslint .*.js --ignore-pattern '!.*'"
   }
 }
