--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
     "gulp-stylelint": "^13.0.0",
+    "sass": "^1.32.5",
     "stylelint": "^10.1.0",
     "stylelint-config-standard": "^18.3.0",
     "stylelint-order": "^3.0.1",
