--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "gulp": "^4.0.2",
     "gulp-data": "^1.3.1",
     "gulp-eslint": "^6.0.0",
+    "gulp-htmlmin": "^5.0.1",
+    "gulp-jsbeautifier": "^3.0.1",
     "gulp-nunjucks-render": "^2.2.3",
     "gulp-rename": "^1.4.0",
     "gulp-sass": "^4.0.2",
