--- a/package.json
+++ b/package.json
@@ -6,19 +6,26 @@
   "license": "GNU GPL v3",
   "private": true,
   "devDependencies": {
+    "autoprefixer": "^10.3.7",
     "browser-sync": "^2.27.5",
     "css": "^3.0.0",
     "del": "^6.0.0",
     "glob": "^7.2.0",
     "gulp": "^4.0.2",
+    "gulp-csso": "^4.0.1",
     "gulp-data": "^1.3.1",
     "gulp-eslint": "^6.0.0",
+    "gulp-gzip": "^1.4.2",
     "gulp-htmlmin": "^5.0.1",
     "gulp-jsbeautifier": "^3.0.1",
     "gulp-nunjucks-render": "^2.2.3",
+    "gulp-postcss": "^9.0.1",
+    "gulp-prettier": "^4.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-stylelint": "^13.0.0",
+    "postcss": "^8.3.11",
+    "prettier": "^2.4.1",
     "sass": "^1.42.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
