--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "c4s-css",
   "version": "0.2.0",
-  "description": "Concise Composable Classes Configurable Stylesheets",
+  "description": "Concise Configurable Composable Classes Stylesheets",
   "author": "Cas Dijkman",
   "license": "GNU GPL v3",
   "private": true,
