--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "scripts": {
     "start": "gulp",
     "build": "gulp build",
+    "build-watch": "gulp buildWatch",
     "serve": "gulp serve",
     "lint": "gulp lint",
     "lint-rc": "yarn eslint .*.js --ignore-pattern '!.*'"
