--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.0.0",
     "gulp-stylelint": "^13.0.0",
+    "highlight.js": "^11.3.1",
     "postcss": "^8.3.11",
     "prettier": "^2.4.1",
     "sass": "^1.42.1",
