--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "highlight.js": "^11.3.1",
     "postcss": "^8.3.11",
     "prettier": "^2.4.1",
+    "pretty-bytes": "^5.6.0",
     "sass": "^1.42.1",
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
