--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "license": "GNU GPL v3",
   "private": true,
   "devDependencies": {
+    "@babel/preset-env": "^7.16.4",
     "autoprefixer": "^10.3.7",
+    "babel-loader": "^8.2.3",
     "browser-sync": "^2.27.5",
     "css": "^3.0.0",
     "del": "^6.0.0",
@@ -32,7 +34,9 @@
     "stylelint": "^13.13.1",
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
-    "stylelint-scss": "^3.21.0"
+    "stylelint-scss": "^3.21.0",
+    "webpack": "^5.64.1",
+    "webpack-cli": "^4.9.1"
   },
   "scripts": {
     "start": "gulp",
