--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,7 @@
+# SPDX-FileCopyrightText: 2021 Cas Dijkman
+#
+# SPDX-License-Identifier: GPL-3.0-only
+
 # Force HTTPS on entire domain
 RewriteEngine On
 
