--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "webpack-cli": "^4.9.1"
   },
   "scripts": {
-    "start": "gulp",
+    "start": "gulp buildWatchServe",
     "build": "gulp build",
     "build-watch": "gulp buildWatch",
     "serve": "gulp serve",
