--- a/.htaccess
+++ b/.htaccess
@@ -6,24 +6,6 @@
 RewriteEngine On
 
 # Force non-www and force https
-RewriteCond %{HTTPS} !=on
-RewriteCond %{HTTP_HOST} ^www\. [NC]
-RewriteRule .* https://c4s.website%{REQUEST_URI} [L,R=301]
-
-# No caching for html files
-<filesMatch "\.(x?html?|php|js)$">
-Header set Cache-Control "no-cache, no-store, must-revalidate"
-Header set Pragma "no-cache"
-Header set Expires 0
-</filesMatch>
-
-# Caching one year for image files
-<filesMatch "\.(jpg|jpeg|png|gif|ico|webp)$">
-Header set Cache-Control "max-age=31536000, public"
-</filesMatch>
-
-# Caching one month for css and js
-<filesMatch "\.(css|js)$">
-Header set Cache-Control "max-age=2628000, public"
-</filesMatch>
+RewriteCond %{HTTPS} off
+RewriteRule (.*) https://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 
