--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-sass": "^5.0.0",
     "gulp-stylelint": "^13.0.0",
     "highlight.js": "^11.3.1",
+    "lorem-ipsum": "^2.0.8",
     "postcss": "^8.3.11",
     "prettier": "^2.4.1",
     "pretty-bytes": "^5.6.0",
