--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Cas Dijkman",
   "license": "GPL-3.0-only",
   "devDependencies": {
+    "@babel/core": "^7.21.8",
     "@babel/preset-env": "^7.16.4",
     "autoprefixer": "^10.3.7",
     "babel-loader": "^8.2.3",
@@ -35,7 +36,7 @@
     "stylelint-config-standard": "^22.0.0",
     "stylelint-order": "^4.1.0",
     "stylelint-scss": "^3.21.0",
-    "webpack": "^5.64.1",
+    "webpack": "^5.82.1",
     "webpack-cli": "^4.9.1"
   },
   "scripts": {
