--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   "devDependencies": {
     "@babel/core": "^7.21.8",
     "@babel/preset-env": "^7.16.4",
+    "@ronilaukkarinen/gulp-stylelint": "^14.1.1",
     "autoprefixer": "^10.4.14",
     "babel-loader": "^9.1.2",
     "browser-sync": "^2.29.3",
@@ -25,14 +26,13 @@
     "gulp-prettier": "^5.0.0",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
-    "gulp-stylelint": "^13.0.0",
     "highlight.js": "^11.8.0",
     "lorem-ipsum": "^2.0.8",
     "postcss": "^8.4.24",
     "prettier": "^3.0.0",
     "pretty-bytes": "^5.6.0",
     "sass": "^1.63.6",
-    "stylelint": "^15.10.0",
+    "stylelint": "^15.10.1",
     "stylelint-config-standard": "^34.0.0",
     "stylelint-config-standard-scss": "^10.0.0",
     "stylelint-order": "^6.0.3",
