--- a/package.json
+++ b/package.json
@@ -29,7 +29,6 @@
     "highlight.js": "^11.8.0",
     "lorem-ipsum": "^2.0.8",
     "postcss": "^8.4.24",
-    "prettier": "^3.0.0",
     "pretty-bytes": "^5.6.0",
     "sass": "^1.63.6",
     "stylelint": "^15.10.1",
@@ -47,5 +46,9 @@
     "serve": "gulp serve",
     "lint": "gulp lint",
     "lint-rc": "npx eslint .*.js --ignore-pattern '!.*'"
+  },
+  "dependencies": {
+    "csso": "^5.0.5",
+    "prettier": "^3.0.0"
   }
 }
