--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "babel-loader": "^9.1.2",
     "browser-sync": "^2.29.3",
     "css": "^3.0.0",
+    "csso": "^5.0.5",
     "del": "^6.0.0",
     "glob": "^10.3.1",
     "gulp": "^4.0.2",
@@ -29,6 +30,7 @@
     "highlight.js": "^11.8.0",
     "lorem-ipsum": "^2.0.8",
     "postcss": "^8.4.24",
+    "prettier": "^3.0.0",
     "pretty-bytes": "^5.6.0",
     "sass": "^1.63.6",
     "stylelint": "^15.10.1",
@@ -46,9 +48,5 @@
     "serve": "gulp serve",
     "lint": "gulp lint",
     "lint-rc": "npx eslint .*.js --ignore-pattern '!.*'"
-  },
-  "dependencies": {
-    "csso": "^5.0.5",
-    "prettier": "^3.0.0"
   }
 }
