--- a/.editorconfig
+++ b/.editorconfig
@@ -15,10 +15,10 @@ insert_final_newline = true
 indent_style = space
 charset = utf-8
 
-[*.{scss,js}]
+[*.scss]
 indent_size = 2
 
-[*.njk]
+[*.{njk,js}]
 indent_size = 4
 
 [package.json]
