--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "start": "gulp buildWatchServe",
     "build": "gulp build",
     "build-watch": "gulp buildWatch",
+    "build-serve": "gulp buildServe",
     "serve": "gulp serve",
     "lint": "gulp lint"
   },
