--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "gulp-sass": "^5.1.0",
     "highlight.js": "^11.8.0",
     "lorem-ipsum": "^2.0.8",
+    "ordinal-numbers": "^1.0.3",
     "postcss": "^8.4.24",
     "prettier": "^3.0.0",
     "pretty-bytes": "^5.6.0",
